kubernetes/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "zimin-nikolay-13.k8s.praktikum-services.tech"
  rules:
    - host: "zimin-nikolay-13.k8s.praktikum-services.tech"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 8080
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
